client/app/main.css
/********************************************

                  COMMON.

********************************************/
/*html { min-width: 960px; }*/

.user-thumb-sm  { width: 28px; height: 28px; border-radius: 50%; }
.user-thumb     { width: 34px; height: 34px; border-radius: 50%; }
.user-thumb-lg  { width: 72px; height: 72px; border-radius: 50%; }
.user-profile   { display: inline-block; background-size: 100%; background-repeat: no-repeat; }

textarea[disabled] {
  background-color: #f1f1f1;
}
[disabled] {
  cursor: not-allowed !important;
}

.break {
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.keep {
  word-wrap: break-word;
  white-space: pre-wrap;
}
.break-word {
  word-wrap: break-word;
}
.underline { border-bottom: 1px solid #31c08a;  }
.cursor_pointer { cursor: pointer; }

.tab-title-overflow-ellipsis > a,
.overflow-ellipsis { display:block;text-overflow:ellipsis;overflow:hidden;white-space:nowrap; }

.inline-overflow-ellipsis { display:inline-block;text-overflow:ellipsis;overflow:hidden;white-space:nowrap; }

.bullet {
  color: #ddd;
  margin: 0 -2px;
}
.alert-jandi {
  padding: 10px 15px;
  margin-bottom: 10px;
  border: 1px solid transparent;
  border-radius: 4px;
  font-size: 14px;
}
select {
  width: 100%;
}
select:focus {
  outline: 0;
}

.lowercase {
  text-transform: lowercase;
}
input[type="email"] {
  text-transform: lowercase;
}
/********************************************

            BASIC TEMPLATE.

********************************************/

.title__divider {
  width: 90px;
  height: 1px;
  background-color: #999999;
  margin: 0 auto 18px;
}
.title {
  font-size: 18px;
  color: #666666;
  margin:0 auto 30px;
  font-weight: 400;
}


/********************************************

                ANIMATION.

********************************************/
.animate-enter { -webkit-transition: 1s linear all; /* Chrome */ transition: 1s linear all; opacity: 0; }
.animate-enter-active , .animate-enter.animate-enter-active { opacity: 1; }

.image_wrapper img {
  -webkit-transition: opacity 0.5s linear; /* Chrome */
  transition: opacity 0.5s linear;
}

.opac-zero {
  opacity: 0;
}
.opac-in {
  opacity: 1;
  -webkit-transition: opacity 0.7s;
  -moz-transition: opacity 0.7s;
  -ms-transition: opacity 0.7s;
  -o-transition: opacity 0.7s;
  transition: opacity 0.7s;
}
.opac-in-fast {
  opacity: 1;
  -webkit-transition: opacity 0.3s;
  -moz-transition: opacity 0.3s;
  -ms-transition: opacity 0.3s;
  -o-transition: opacity 0.3s;
  transition: opacity 0.3s;
  /*-webkit-transition: opacity 0.7s;*/
  /*-moz-transition: opacity 0.7s;*/
  /*-ms-transition: opacity 0.7s;*/
  /*-o-transition: opacity 0.7s;*/
  /*transition: opacity 0.7s;*/
}

/*
 *
    BACKGROUND ANIMATION.
 *
 */

/* Chrome, Safari, Opera */
@-webkit-keyframes green_background {
  from {background-color: rgb(242, 242, 242);}
  to {background-color: #31c08a;}
}
/* Standard syntax */
@keyframes green_background {
  from {background-color: rgb(242, 242, 242);}
  to {background-color: #31c08a;}
}

/*
 *
    OPACITY ANIMATION
 *
 */


/* Chrome, Safari, Opera */
@-webkit-keyframes opacIn-from-0 {
  from {opacity: 0.0; }
  to {opacity: 1; display: block; }
}
/* Standard syntax */
@keyframes opacIn-from-0 {
  from {opacity: 0.0; }
  to {opacity: 1; display: block;}
}
/* Chrome, Safari, Opera */
@-webkit-keyframes opacIn-from-20 {
  from {opacity: 0.2; }
  to {opacity: 1; }
}
/* Standard syntax */
@keyframes opacIn-from-20 {
  from {opacity: 0.2; }
  to {opacity: 1; }
}

/* Chrome, Safari, Opera */
@-webkit-keyframes opacOut-to-0 {
  from {opacity:1; }
  to {opacity: 0.0; display: none; }
}
/* Standard syntax */
@keyframes opacOut-to-0 {
  from {opacity: 1.0; }
  to {opacity: 0; display: none;}
}

/* Chrome, Safari, Opera */
@-webkit-keyframes fromRight {
  0%      { right: -480px; }
  25%     { right: -320px; }
  50%     { right: -160px; }
  100%    { right: 0px; }
}
/* Standard syntax */
@keyframes fromRight {
  0%      { right: -480px; }
  25%     { right: -320px; }
  50%     { right: -160px; }
  100%    { right: 0px; }
}


/* Chrome, Safari, Opera */
@-webkit-keyframes toRight {
  0%      { right: 0px; }
  25%     { right: -160px; }
  50%     { right: -320px; }
  100%    { right: -480px; }
}
/* Standard syntax */
@keyframes toRight {
  0%      { right: 0px; }
  25%     { right: -160px; }
  50%     { right: -320px; }
  100%    { right: -480px; }
}

/* Chrome, Safari, Opera */
@-webkit-keyframes slide-from-right {
  from {margin-right: -100%;}
  to {margin-right: 0;  }
}
/* Standard syntax */
@keyframes slide-from-right {
  from {margin-right: -100%;}
  to {margin-right: 0;}
}

/* Chrome, Safari, Opera */
@-webkit-keyframes display-block {
  from {display: none; }
  to {display: block;  }
}
/* Standard syntax */
@keyframes display-block {
  from {display: none ;}
  to {display: block;  }
}


/********************************************

                   COLOR.

********************************************/
.green_font { color: #31c08a; }
.green_font:hover { text-decoration: none; color: #31c08a; }

.link-dark,
.link-dark:link,
.link-dark:active {
  color: #babbbf;
}
.link-dark:hover {
  color: #555459;
}
.link-green,
.link-green:link,
.link-green:active {
  color: #31c08a;
}
.link-green:hover {
  color: #008F59;
}
.link-remove,
.link-remove:link,
.link-remove:active {
  color: #154a67;
  margin-left: -2px;
}
.link-remove:hover {
  color: #d62d17;
  opacity: 1;
  text-decoration: none;
}

.link-unshare {
  font-size: .7rem;
}
.link-unshare:hover {
  color: indianred !important;
}
.green_badge {
  background-color: #00abe6;
}
.green_background {
  background-color: #31c08a !important;
}
.to_green_background {
  -webkit-animation: green_background 0.5s; /* Chrome, Safari, Opera */
  animation: green_background 0.5s;
  background-color: #31c08a !important;
}

.white_background {
  background-color: white;
}

.hover-underline:hover {
  text-decoration: underline;
}
/* ... */

